# qt-random-video

./: CMakeLists.txt  README.md
src/: main.cpp  skip_player.cpp  skip_player.hpp  video_button.cpp  video_button.hpp  video_player.cpp  video_player.hpp
